# udp-discovery-cpp

./: CMakeLists.txt
cmake/: udpDiscoveryCppConfig.cmake.in
